<resources>
    <string name="app_name">yogoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_newworkout">new workout</string>
    <string name="menu_searchbytags">search by tags</string>
    <string name="menu_foryou">for you</string>
    <string name="menu_myhistory">my history</string>
    <string name="menu_aboutapp">about app</string>
    <string name="menu_privacypolicy">privacy policy</string>
</resources>