<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_newworkout"
            android:title="@string/menu_newworkout" />
        <item
            android:id="@+id/nav_searchbytags"
            android:title="@string/menu_searchbytags" />
        <item
            android:id="@+id/nav_foryou"
            android:title="@string/menu_foryou" />
        <item
            android:id="@+id/nav_myhistory"
            android:title="@string/menu_myhistory" />




        <!-- separators -->
        <item
            android:id="@+id/separator"
            android:title=""
            android:enabled="false"
            android:icon="@android:color/transparent" />

        <item
            android:id="@+id/separator2"
            android:title=""
            android:enabled="false"
            android:icon="@android:color/transparent" />

        <item
            android:id="@+id/separator3"
            android:title=""
            android:enabled="false"
            android:icon="@android:color/transparent" />

        <item
            android:id="@+id/separator4"
            android:title=""
            android:enabled="false"
            android:icon="@android:color/transparent" />

        <item
            android:id="@+id/separator5"
            android:title=""
            android:enabled="false"
            android:icon="@android:color/transparent" />

        <item
            android:id="@+id/separator6"
            android:title=""
            android:enabled="false"
            android:icon="@android:color/transparent" />

        <item
            android:id="@+id/separator7"
            android:title=""
            android:enabled="false"
            android:icon="@android:color/transparent" />




        <item
            android:id="@+id/nav_aboutapp"
            android:title="@string/menu_aboutapp" />
        <item
            android:id="@+id/nav_privacypolicy"
            android:title="@string/menu_privacypolicy" />
    </group>
</menu>